@@ -19,26 +19,21 @@ package org.apache.kafka.common.security;
 import org.apache.kafka.common.config.SaslConfigs;
 import org.apache.kafka.common.config.types.Password;
 import org.apache.kafka.common.network.ListenerName;
-
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import javax.security.auth.login.AppConfigurationEntry;
+import javax.security.auth.login.Configuration;
+import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
-import java.util.Set;
-import java.util.stream.Collectors;
-
-import javax.security.auth.login.AppConfigurationEntry;
-import javax.security.auth.login.Configuration;
-
-import static org.apache.kafka.common.security.JaasUtils.DISALLOWED_LOGIN_MODULES_CONFIG;
-import static org.apache.kafka.common.security.JaasUtils.DISALLOWED_LOGIN_MODULES_DEFAULT;
 
 public class JaasContext {
 
-    private static final Logger LOG = LoggerFactory.getLogger(JaasContext.class);
+    private static final Logger LOG = LoggerFactory.getLogger(JaasUtils.class);
 
     private static final String GLOBAL_CONTEXT_NAME_SERVER = "KafkaServer";
     private static final String GLOBAL_CONTEXT_NAME_CLIENT = "KafkaClient";
@@ -46,73 +41,59 @@ public class JaasContext {
     /**
      * Returns an instance of this class.
      *
-     * The context will contain the configuration specified by the JAAS configuration property
-     * {@link SaslConfigs#SASL_JAAS_CONFIG} with prefix `listener.name.{listenerName}.{mechanism}.`
-     * with listenerName and mechanism in lower case. The context `KafkaServer` will be returned
-     * with a single login context entry loaded from the property.
-     * <p>
-     * If the property is not defined, the context will contain the default Configuration and
-     * the context name will be one of:
-     * <ol>
-     *   <li>Lowercased listener name followed by a period and the string `KafkaServer`</li>
-     *   <li>The string `KafkaServer`</li>
-     *  </ol>
-     * If both are valid entries in the default JAAS configuration, the first option is chosen.
-     * </p>
+     * For contextType SERVER, the context will contain the default Configuration and the context name will be one of:
      *
-     * @throws IllegalArgumentException if listenerName or mechanism is not defined.
-     */
-    public static JaasContext loadServerContext(ListenerName listenerName, String mechanism, Map<String, ?> configs) {
-        if (listenerName == null)
-            throw new IllegalArgumentException("listenerName should not be null for SERVER");
-        if (mechanism == null)
-            throw new IllegalArgumentException("mechanism should not be null for SERVER");
-        String listenerContextName = listenerName.value().toLowerCase(Locale.ROOT) + "." + GLOBAL_CONTEXT_NAME_SERVER;
-        Password dynamicJaasConfig = (Password) configs.get(mechanism.toLowerCase(Locale.ROOT) + "." + SaslConfigs.SASL_JAAS_CONFIG);
-        if (dynamicJaasConfig == null && configs.get(SaslConfigs.SASL_JAAS_CONFIG) != null)
-            LOG.warn("Server config {} should be prefixed with SASL mechanism name, ignoring config", SaslConfigs.SASL_JAAS_CONFIG);
-        return load(Type.SERVER, listenerContextName, GLOBAL_CONTEXT_NAME_SERVER, dynamicJaasConfig);
-    }
-
-    /**
-     * Returns an instance of this class.
+     * 1. Lowercased listener name followed by a period and the string `KafkaServer`
+     * 2. The string `KafkaServer`
      *
-     * If JAAS configuration property {@link SaslConfigs#SASL_JAAS_CONFIG} is specified,
+     * If both are valid entries in the JAAS configuration, the first option is chosen.
+     *
+     * For contextType CLIENT, if JAAS configuration property @link SaslConfigs#SASL_JAAS_CONFIG} is specified,
      * the configuration object is created by parsing the property value. Otherwise, the default Configuration
      * is returned. The context name is always `KafkaClient`.
      *
+     * @throws IllegalArgumentException if JAAS configuration property is specified for contextType SERVER, if
+     * listenerName is not defined for contextType SERVER of if listenerName is defined for contextType CLIENT.
      */
-    public static JaasContext loadClientContext(Map<String, ?> configs) {
-        Password dynamicJaasConfig = (Password) configs.get(SaslConfigs.SASL_JAAS_CONFIG);
-        return load(JaasContext.Type.CLIENT, null, GLOBAL_CONTEXT_NAME_CLIENT, dynamicJaasConfig);
+    public static JaasContext load(JaasContext.Type contextType, ListenerName listenerName,
+                                   Map<String, ?> configs) {
+        String listenerContextName;
+        String globalContextName;
+        switch (contextType) {
+            case CLIENT:
+                if (listenerName != null)
+                    throw new IllegalArgumentException("listenerName should be null for CLIENT");
+                globalContextName = GLOBAL_CONTEXT_NAME_CLIENT;
+                listenerContextName = null;
+                break;
+            case SERVER:
+                if (listenerName == null)
+                    throw new IllegalArgumentException("listenerName should not be null for SERVER");
+                globalContextName = GLOBAL_CONTEXT_NAME_SERVER;
+                listenerContextName = listenerName.value().toLowerCase(Locale.ROOT) + "." + GLOBAL_CONTEXT_NAME_SERVER;
+                break;
+            default:
+                throw new IllegalArgumentException("Unexpected context type " + contextType);
+        }
+        return load(contextType, listenerContextName, globalContextName, configs);
     }
 
     static JaasContext load(JaasContext.Type contextType, String listenerContextName,
-                            String globalContextName, Password dynamicJaasConfig) {
-        if (dynamicJaasConfig != null) {
-            JaasConfig jaasConfig = new JaasConfig(globalContextName, dynamicJaasConfig.value());
-            AppConfigurationEntry[] contextModules = jaasConfig.getAppConfigurationEntry(globalContextName);
-            if (contextModules == null || contextModules.length == 0)
-                throw new IllegalArgumentException("JAAS config property does not contain any login modules");
-            else if (contextModules.length != 1)
-                throw new IllegalArgumentException("JAAS config property contains " + contextModules.length + " login modules, should be 1 module");
-
-            throwIfLoginModuleIsNotAllowed(contextModules[0]);
-            return new JaasContext(globalContextName, contextType, jaasConfig, dynamicJaasConfig);
+                            String globalContextName, Map<String, ?> configs) {
+        Password jaasConfigArgs = (Password) configs.get(SaslConfigs.SASL_JAAS_CONFIG);
+        if (jaasConfigArgs != null) {
+            if (contextType == JaasContext.Type.SERVER)
+                throw new IllegalArgumentException("JAAS config property not supported for server");
+            else {
+                JaasConfig jaasConfig = new JaasConfig(globalContextName, jaasConfigArgs.value());
+                AppConfigurationEntry[] clientModules = jaasConfig.getAppConfigurationEntry(globalContextName);
+                int numModules = clientModules == null ? 0 : clientModules.length;
+                if (numModules != 1)
+                    throw new IllegalArgumentException("JAAS config property contains " + numModules + " login modules, should be 1 module");
+                return new JaasContext(globalContextName, contextType, jaasConfig);
+            }
         } else
             return defaultContext(contextType, listenerContextName, globalContextName);
-    }
-
-    private static void throwIfLoginModuleIsNotAllowed(AppConfigurationEntry appConfigurationEntry) {
-        Set<String> disallowedLoginModuleList = Arrays.stream(
-                System.getProperty(DISALLOWED_LOGIN_MODULES_CONFIG, DISALLOWED_LOGIN_MODULES_DEFAULT).split(","))
-                .map(String::trim)
-                .collect(Collectors.toSet());
-        String loginModuleName = appConfigurationEntry.getLoginModuleName().trim();
-        if (disallowedLoginModuleList.contains(loginModuleName)) {
-            throw new IllegalArgumentException(loginModuleName + " is not allowed. Update System property '"
-                    + DISALLOWED_LOGIN_MODULES_CONFIG + "' to allow " + loginModuleName);
-        }
     }
 
     private static JaasContext defaultContext(JaasContext.Type contextType, String listenerContextName,
@@ -150,33 +131,28 @@ public class JaasContext {
             throw new IllegalArgumentException(errorMessage);
         }
 
-        for (AppConfigurationEntry appConfigurationEntry : configEntries) {
-            throwIfLoginModuleIsNotAllowed(appConfigurationEntry);
-        }
-        return new JaasContext(contextName, contextType, jaasConfig, null);
+        return new JaasContext(contextName, contextType, jaasConfig);
     }
 
     /**
      * The type of the SASL login context, it should be SERVER for the broker and CLIENT for the clients (consumer, producer,
      * etc.). This is used to validate behaviour (e.g. some functionality is only available in the broker or clients).
      */
-    public enum Type { CLIENT, SERVER }
+    public enum Type { CLIENT, SERVER; }
 
     private final String name;
     private final Type type;
     private final Configuration configuration;
     private final List<AppConfigurationEntry> configurationEntries;
-    private final Password dynamicJaasConfig;
 
-    public JaasContext(String name, Type type, Configuration configuration, Password dynamicJaasConfig) {
+    public JaasContext(String name, Type type, Configuration configuration) {
         this.name = name;
         this.type = type;
         this.configuration = configuration;
         AppConfigurationEntry[] entries = configuration.getAppConfigurationEntry(name);
         if (entries == null)
             throw new IllegalArgumentException("Could not find a '" + name + "' entry in this JAAS configuration.");
-        this.configurationEntries = List.of(entries);
-        this.dynamicJaasConfig = dynamicJaasConfig;
+        this.configurationEntries = Collections.unmodifiableList(new ArrayList<>(Arrays.asList(entries)));
     }
 
     public String name() {
@@ -195,15 +171,11 @@ public class JaasContext {
         return configurationEntries;
     }
 
-    public Password dynamicJaasConfig() {
-        return dynamicJaasConfig;
-    }
-
     /**
      * Returns the configuration option for <code>key</code> from this context.
      * If login module name is specified, return option value only from that module.
      */
-    public static String configEntryOption(List<AppConfigurationEntry> configurationEntries, String key, String loginModuleName) {
+    public String configEntryOption(String key, String loginModuleName) {
         for (AppConfigurationEntry entry : configurationEntries) {
             if (loginModuleName != null && !loginModuleName.equals(entry.getLoginModuleName()))
                 continue;
