@@ -88,7 +88,7 @@ public class SchemaBuilder implements Schema {
 
     @Override
     public boolean isOptional() {
-        return optional != null && optional;
+        return optional == null ? false : optional;
     }
 
     /**
@@ -226,7 +226,7 @@ public class SchemaBuilder implements Schema {
 
     /**
      * Create a SchemaBuilder for the specified type.
-     * <p>
+     *
      * Usually it will be simpler to use one of the variants like {@link #string()} or {@link #struct()}, but this form
      * can be useful when generating schemas dynamically.
      *
@@ -313,7 +313,7 @@ public class SchemaBuilder implements Schema {
     }
 
     /**
-     * Add a field to this {@link Schema.Type#STRUCT} schema. Throws a {@link SchemaBuilderException} if this is not a struct schema.
+     * Add a field to this struct schema. Throws a SchemaBuilderException if this is not a struct schema.
      * @param fieldName the name of the field to add
      * @param fieldSchema the Schema for the field's value
      * @return the SchemaBuilder
@@ -333,17 +333,15 @@ public class SchemaBuilder implements Schema {
     }
 
     /**
-     * Get the list of fields for this Schema. Throws a {@link DataException} if this schema is not a {@link Schema.Type#STRUCT}.
+     * Get the list of fields for this Schema. Throws a DataException if this schema is not a struct.
      * @return the list of fields for this Schema
      */
-    @Override
     public List<Field> fields() {
         if (type != Type.STRUCT)
             throw new DataException("Cannot list fields on non-struct type");
         return new ArrayList<>(fields.values());
     }
 
-    @Override
     public Field field(String fieldName) {
         if (type != Type.STRUCT)
             throw new DataException("Cannot look up fields on non-struct type");
@@ -382,26 +380,6 @@ public class SchemaBuilder implements Schema {
         return builder;
     }
 
-    static SchemaBuilder arrayOfNull() {
-        return new SchemaBuilder(Type.ARRAY);
-    }
-
-    static SchemaBuilder mapOfNull() {
-        return new SchemaBuilder(Type.MAP);
-    }
-
-    static SchemaBuilder mapWithNullKeys(Schema valueSchema) {
-        SchemaBuilder result = new SchemaBuilder(Type.MAP);
-        result.valueSchema = valueSchema;
-        return result;
-    }
-
-    static SchemaBuilder mapWithNullValues(Schema keySchema) {
-        SchemaBuilder result = new SchemaBuilder(Type.MAP);
-        result.keySchema = keySchema;
-        return result;
-    }
-
     @Override
     public Schema keySchema() {
         return keySchema;
@@ -420,7 +398,7 @@ public class SchemaBuilder implements Schema {
     public Schema build() {
         return new ConnectSchema(type, isOptional(), defaultValue, name, version, doc,
                 parameters == null ? null : Collections.unmodifiableMap(parameters),
-                fields == null ? null : List.copyOf(fields.values()), keySchema, valueSchema);
+                fields == null ? null : Collections.unmodifiableList(new ArrayList<Field>(fields.values())), keySchema, valueSchema);
     }
 
     /**
