@@ -16,87 +16,87 @@
  */
 package org.apache.kafka.streams.processor.internals;
 
+import org.apache.kafka.common.Cluster;
+import org.apache.kafka.common.Node;
 import org.apache.kafka.common.PartitionInfo;
 import org.apache.kafka.common.TopicPartition;
 import org.apache.kafka.common.serialization.Serdes;
 import org.apache.kafka.common.serialization.Serializer;
-import org.apache.kafka.common.utils.LogContext;
-import org.apache.kafka.streams.KeyQueryMetadata;
+import org.apache.kafka.common.utils.Bytes;
+import org.apache.kafka.common.utils.Utils;
+import org.apache.kafka.streams.Consumed;
 import org.apache.kafka.streams.StreamsBuilder;
-import org.apache.kafka.streams.StreamsMetadata;
-import org.apache.kafka.streams.TopologyWrapper;
-import org.apache.kafka.streams.kstream.Consumed;
+import org.apache.kafka.streams.StreamsBuilderTest;
 import org.apache.kafka.streams.kstream.KStream;
 import org.apache.kafka.streams.kstream.Materialized;
+import org.apache.kafka.streams.kstream.Predicate;
+import org.apache.kafka.streams.kstream.ValueMapper;
 import org.apache.kafka.streams.processor.StreamPartitioner;
-import org.apache.kafka.streams.processor.internals.testutil.DummyStreamsConfig;
 import org.apache.kafka.streams.state.HostInfo;
-import org.apache.kafka.streams.state.internals.StreamsMetadataImpl;
+import org.apache.kafka.streams.state.KeyValueStore;
+import org.apache.kafka.streams.state.StreamsMetadata;
+import org.junit.Before;
+import org.junit.Test;
 
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
-
-import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
-import java.util.HashSet;
+import java.util.List;
 import java.util.Map;
-import java.util.Optional;
 import java.util.Set;
-import java.util.function.Function;
-import java.util.stream.Collectors;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertNull;
-import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertTrue;
 
 public class StreamsMetadataStateTest {
 
-    private StreamsMetadataState metadataState;
+    private StreamsMetadataState discovery;
     private HostInfo hostOne;
     private HostInfo hostTwo;
     private HostInfo hostThree;
     private TopicPartition topic1P0;
     private TopicPartition topic2P0;
     private TopicPartition topic3P0;
-    private Map<HostInfo, Set<TopicPartition>> hostToActivePartitions;
-    private Map<HostInfo, Set<TopicPartition>> hostToStandbyPartitions;
+    private Map<HostInfo, Set<TopicPartition>> hostToPartitions;
     private StreamsBuilder builder;
     private TopicPartition topic1P1;
     private TopicPartition topic2P1;
     private TopicPartition topic4P0;
-    private Map<TopicPartition, PartitionInfo> partitionInfos;
+    private List<PartitionInfo> partitionInfos;
+    private Cluster cluster;
     private final String globalTable = "global-table";
-    private final LogContext logContext = new LogContext(String.format("test [%s] ", "StreamsMetadataStateTest"));
     private StreamPartitioner<String, Object> partitioner;
-    private Set<String> storeNames;
 
-    @BeforeEach
-    public void before() {
+    @Before
+    public void before() throws Exception {
         builder = new StreamsBuilder();
         final KStream<Object, Object> one = builder.stream("topic-one");
-        one.groupByKey().count(Materialized.as("table-one"));
+        one.groupByKey().count("table-one");
 
         final KStream<Object, Object> two = builder.stream("topic-two");
-        two.groupByKey().count(Materialized.as("table-two"));
+        two.groupByKey().count("table-two");
 
         builder.stream("topic-three")
                 .groupByKey()
-                .count(Materialized.as("table-three"));
+                .count("table-three");
 
-        one.merge(two).groupByKey().count(Materialized.as("merged-table"));
+        one.merge(two).groupByKey().count("merged-table");
 
-        builder.stream("topic-four").mapValues(value -> value);
+        builder.stream("topic-four").mapValues(new ValueMapper<Object, Object>() {
+            @Override
+            public Object apply(final Object value) {
+                return value;
+            }
+        });
 
         builder.globalTable("global-topic",
                             Consumed.with(null, null),
-                            Materialized.as(globalTable));
+                            Materialized.<Object, Object, KeyValueStore<Bytes, byte[]>>as(globalTable));
 
-        TopologyWrapper.getInternalTopologyBuilder(builder.build()).setApplicationId("appId");
+        StreamsBuilderTest.internalTopologyBuilder(builder).setApplicationId("appId");
 
         topic1P0 = new TopicPartition("topic-one", 0);
         topic1P1 = new TopicPartition("topic-one", 1);
@@ -108,300 +108,216 @@ public class StreamsMetadataStateTest {
         hostOne = new HostInfo("host-one", 8080);
         hostTwo = new HostInfo("host-two", 9090);
         hostThree = new HostInfo("host-three", 7070);
-        hostToActivePartitions = new HashMap<>();
-        hostToActivePartitions.put(hostOne, Set.of(topic1P0, topic2P1, topic4P0));
-        hostToActivePartitions.put(hostTwo, Set.of(topic2P0, topic1P1));
-        hostToActivePartitions.put(hostThree, Collections.singleton(topic3P0));
-        hostToStandbyPartitions = new HashMap<>();
-        hostToStandbyPartitions.put(hostThree, Set.of(topic1P0, topic2P1, topic4P0));
-        hostToStandbyPartitions.put(hostOne, Set.of(topic2P0, topic1P1));
-        hostToStandbyPartitions.put(hostTwo, Collections.singleton(topic3P0));
+        hostToPartitions = new HashMap<>();
+        hostToPartitions.put(hostOne, Utils.mkSet(topic1P0, topic2P1, topic4P0));
+        hostToPartitions.put(hostTwo, Utils.mkSet(topic2P0, topic1P1));
+        hostToPartitions.put(hostThree, Collections.singleton(topic3P0));
 
-        partitionInfos = new HashMap<>();
-        partitionInfos.put(new TopicPartition("topic-one", 0), new PartitionInfo("topic-one", 0, null, null, null));
-        partitionInfos.put(new TopicPartition("topic-one", 1), new PartitionInfo("topic-one", 1, null, null, null));
-        partitionInfos.put(new TopicPartition("topic-two", 0), new PartitionInfo("topic-two", 0, null, null, null));
-        partitionInfos.put(new TopicPartition("topic-two", 1), new PartitionInfo("topic-two", 1, null, null, null));
-        partitionInfos.put(new TopicPartition("topic-three", 0), new PartitionInfo("topic-three", 0, null, null, null));
-        partitionInfos.put(new TopicPartition("topic-four", 0), new PartitionInfo("topic-four", 0, null, null, null));
+        partitionInfos = Arrays.asList(
+                new PartitionInfo("topic-one", 0, null, null, null),
+                new PartitionInfo("topic-one", 1, null, null, null),
+                new PartitionInfo("topic-two", 0, null, null, null),
+                new PartitionInfo("topic-two", 1, null, null, null),
+                new PartitionInfo("topic-three", 0, null, null, null),
+                new PartitionInfo("topic-four", 0, null, null, null));
 
-        final TopologyMetadata topologyMetadata = new TopologyMetadata(TopologyWrapper.getInternalTopologyBuilder(builder.build()), new DummyStreamsConfig());
-        topologyMetadata.buildAndRewriteTopology();
-        metadataState = new StreamsMetadataState(topologyMetadata, hostOne, logContext);
-        metadataState.onChange(hostToActivePartitions, hostToStandbyPartitions, partitionInfos);
-        partitioner = (topic, key, value, numPartitions) -> Optional.of(Collections.singleton(1));
-        storeNames = Set.of("table-one", "table-two", "merged-table", globalTable);
-    }
-
-    static class MultiValuedPartitioner implements StreamPartitioner<String, Object> {
-        @Override
-        public Optional<Set<Integer>> partitions(final String topic, final String key, final Object value, final int numPartitions) {
-            final Set<Integer> partitions = new HashSet<>();
-            partitions.add(0);
-            partitions.add(1);
-            return Optional.of(partitions);
-        }
+        cluster = new Cluster(null, Collections.<Node>emptyList(), partitionInfos, Collections.<String>emptySet(), Collections.<String>emptySet());
+        discovery = new StreamsMetadataState(StreamsBuilderTest.internalTopologyBuilder(builder), hostOne);
+        discovery.onChange(hostToPartitions, cluster);
+        partitioner = new StreamPartitioner<String, Object>() {
+            @Override
+            public Integer partition(final String key, final Object value, final int numPartitions) {
+                return 1;
+            }
+        };
     }
 
     @Test
-    public void shouldNotThrowExceptionWhenOnChangeNotCalled() {
-        final Collection<StreamsMetadata> metadata = new StreamsMetadataState(
-            new TopologyMetadata(TopologyWrapper.getInternalTopologyBuilder(builder.build()), new DummyStreamsConfig()),
-            hostOne,
-            logContext
-        ).allMetadataForStore("store");
-        assertEquals(0, metadata.size());
+    public void shouldNotThrowNPEWhenOnChangeNotCalled() {
+        new StreamsMetadataState(StreamsBuilderTest.internalTopologyBuilder(builder), hostOne).getAllMetadataForStore("store");
     }
 
     @Test
     public void shouldGetAllStreamInstances() {
-        final StreamsMetadata one = new StreamsMetadataImpl(hostOne,
-            Set.of(globalTable, "table-one", "table-two", "merged-table"),
-            Set.of(topic1P0, topic2P1, topic4P0),
-            Set.of("table-one", "table-two", "merged-table"),
-            Set.of(topic2P0, topic1P1));
-        final StreamsMetadata two = new StreamsMetadataImpl(hostTwo,
-            Set.of(globalTable, "table-two", "table-one", "merged-table"),
-            Set.of(topic2P0, topic1P1),
-            Set.of("table-three"),
-            Set.of(topic3P0));
-        final StreamsMetadata three = new StreamsMetadataImpl(hostThree,
-            Set.of(globalTable, "table-three"),
-            Collections.singleton(topic3P0),
-            Set.of("table-one", "table-two", "merged-table"),
-            Set.of(topic1P0, topic2P1, topic4P0));
+        final StreamsMetadata one = new StreamsMetadata(hostOne, Utils.mkSet(globalTable, "table-one", "table-two", "merged-table"),
+                Utils.mkSet(topic1P0, topic2P1, topic4P0));
+        final StreamsMetadata two = new StreamsMetadata(hostTwo, Utils.mkSet(globalTable, "table-two", "table-one", "merged-table"),
+                Utils.mkSet(topic2P0, topic1P1));
+        final StreamsMetadata three = new StreamsMetadata(hostThree, Utils.mkSet(globalTable, "table-three"),
+                Collections.singleton(topic3P0));
 
-        final Collection<StreamsMetadata> actual = metadataState.allMetadata();
+        Collection<StreamsMetadata> actual = discovery.getAllMetadata();
         assertEquals(3, actual.size());
-        assertTrue(actual.contains(one), "expected " + actual + " to contain " + one);
-        assertTrue(actual.contains(two), "expected " + actual + " to contain " + two);
-        assertTrue(actual.contains(three), "expected " + actual + " to contain " + three);
+        assertTrue("expected " + actual + " to contain " + one, actual.contains(one));
+        assertTrue("expected " + actual + " to contain " + two, actual.contains(two));
+        assertTrue("expected " + actual + " to contain " + three, actual.contains(three));
     }
 
     @Test
     public void shouldGetAllStreamsInstancesWithNoStores() {
-        builder.stream("topic-five").filter((key, value) -> true).to("some-other-topic");
+        builder.stream("topic-five").filter(new Predicate<Object, Object>() {
+            @Override
+            public boolean test(final Object key, final Object value) {
+                return true;
+            }
+        }).to("some-other-topic");
 
         final TopicPartition tp5 = new TopicPartition("topic-five", 1);
         final HostInfo hostFour = new HostInfo("host-four", 8080);
-        hostToActivePartitions.put(hostFour, Set.of(tp5));
+        hostToPartitions.put(hostFour, Utils.mkSet(tp5));
 
-        metadataState.onChange(hostToActivePartitions, Collections.emptyMap(),
-            Collections.singletonMap(tp5, new PartitionInfo("topic-five", 1, null, null, null)));
+        discovery.onChange(hostToPartitions, cluster.withPartitions(Collections.singletonMap(tp5, new PartitionInfo("topic-five", 1, null, null, null))));
 
-        final StreamsMetadata expected = new StreamsMetadataImpl(hostFour, Collections.singleton(globalTable),
-                Collections.singleton(tp5), Collections.emptySet(), Collections.emptySet());
-        final Collection<StreamsMetadata> actual = metadataState.allMetadata();
-        assertTrue(actual.contains(expected), "expected " + actual + " to contain " + expected);
+        final StreamsMetadata expected = new StreamsMetadata(hostFour, Collections.singleton(globalTable),
+                Collections.singleton(tp5));
+        final Collection<StreamsMetadata> actual = discovery.getAllMetadata();
+        assertTrue("expected " + actual + " to contain " + expected, actual.contains(expected));
     }
 
     @Test
     public void shouldGetInstancesForStoreName() {
-        final StreamsMetadata one = new StreamsMetadataImpl(hostOne,
-            Set.of(globalTable, "table-one", "table-two", "merged-table"),
-            Set.of(topic1P0, topic2P1, topic4P0),
-            Set.of("table-one", "table-two", "merged-table"),
-            Set.of(topic2P0, topic1P1));
-        final StreamsMetadata two = new StreamsMetadataImpl(hostTwo,
-            Set.of(globalTable, "table-two", "table-one", "merged-table"),
-            Set.of(topic2P0, topic1P1),
-            Set.of("table-three"),
-            Set.of(topic3P0));
-        final Collection<StreamsMetadata> actual = metadataState.allMetadataForStore("table-one");
-        final Map<HostInfo, StreamsMetadata> actualAsMap = actual.stream()
-            .collect(Collectors.toMap(StreamsMetadata::hostInfo, Function.identity()));
-        assertEquals(3, actual.size());
-        assertTrue(actual.contains(one), "expected " + actual + " to contain " + one);
-        assertTrue(actual.contains(two), "expected " + actual + " to contain " + two);
-        assertTrue(actualAsMap.get(hostThree).standbyStateStoreNames().contains("table-one"),
-            "expected " + hostThree + " to contain as standby");
+        final StreamsMetadata one = new StreamsMetadata(hostOne, Utils.mkSet(globalTable, "table-one", "table-two", "merged-table"),
+                Utils.mkSet(topic1P0, topic2P1, topic4P0));
+        final StreamsMetadata two = new StreamsMetadata(hostTwo, Utils.mkSet(globalTable, "table-two", "table-one", "merged-table"),
+                Utils.mkSet(topic2P0, topic1P1));
+        final Collection<StreamsMetadata> actual = discovery.getAllMetadataForStore("table-one");
+        assertEquals(2, actual.size());
+        assertTrue("expected " + actual + " to contain " + one, actual.contains(one));
+        assertTrue("expected " + actual + " to contain " + two, actual.contains(two));
     }
 
-    @Test
+    @Test(expected = NullPointerException.class)
     public void shouldThrowIfStoreNameIsNullOnGetAllInstancesWithStore() {
-        assertThrows(NullPointerException.class, () -> metadataState.allMetadataForStore(null));
+        discovery.getAllMetadataForStore(null);
     }
 
     @Test
     public void shouldReturnEmptyCollectionOnGetAllInstancesWithStoreWhenStoreDoesntExist() {
-        final Collection<StreamsMetadata> actual = metadataState.allMetadataForStore("not-a-store");
+        final Collection<StreamsMetadata> actual = discovery.getAllMetadataForStore("not-a-store");
         assertTrue(actual.isEmpty());
     }
 
     @Test
     public void shouldGetInstanceWithKey() {
         final TopicPartition tp4 = new TopicPartition("topic-three", 1);
-        hostToActivePartitions.put(hostTwo, Set.of(topic2P0, tp4));
+        hostToPartitions.put(hostTwo, Utils.mkSet(topic2P0, tp4));
 
-        metadataState.onChange(hostToActivePartitions, hostToStandbyPartitions,
-            Collections.singletonMap(tp4, new PartitionInfo("topic-three", 1, null, null, null)));
+        discovery.onChange(hostToPartitions, cluster.withPartitions(Collections.singletonMap(tp4, new PartitionInfo("topic-three", 1, null, null, null))));
 
-        final KeyQueryMetadata expected = new KeyQueryMetadata(hostThree, Set.of(hostTwo), 0);
-        final KeyQueryMetadata actual = metadataState.keyQueryMetadataForKey("table-three",
+        final StreamsMetadata expected = new StreamsMetadata(hostThree, Utils.mkSet(globalTable, "table-three"),
+                Collections.singleton(topic3P0));
+
+        final StreamsMetadata actual = discovery.getMetadataWithKey("table-three",
                                                                     "the-key",
                                                                     Serdes.String().serializer());
+
         assertEquals(expected, actual);
     }
 
     @Test
     public void shouldGetInstanceWithKeyAndCustomPartitioner() {
         final TopicPartition tp4 = new TopicPartition("topic-three", 1);
-        hostToActivePartitions.put(hostTwo, Set.of(topic2P0, tp4));
+        hostToPartitions.put(hostTwo, Utils.mkSet(topic2P0, tp4));
 
-        metadataState.onChange(hostToActivePartitions, hostToStandbyPartitions,
-            Collections.singletonMap(tp4, new PartitionInfo("topic-three", 1, null, null, null)));
+        discovery.onChange(hostToPartitions, cluster.withPartitions(Collections.singletonMap(tp4, new PartitionInfo("topic-three", 1, null, null, null))));
 
-        final KeyQueryMetadata expected = new KeyQueryMetadata(hostTwo, Collections.emptySet(), 1);
+        final StreamsMetadata expected = new StreamsMetadata(hostTwo, Utils.mkSet(globalTable, "table-two", "table-three", "merged-table"),
+                Utils.mkSet(topic2P0, tp4));
 
-        final KeyQueryMetadata actual = metadataState.keyQueryMetadataForKey("table-three",
-                "the-key",
-                partitioner);
+        StreamsMetadata actual = discovery.getMetadataWithKey("table-three", "the-key", partitioner);
         assertEquals(expected, actual);
-        assertEquals(1, actual.partition());
-    }
-
-    @Test
-    public void shouldFailWhenIqQueriedWithCustomPartitionerReturningMultiplePartitions() {
-        final TopicPartition tp4 = new TopicPartition("topic-three", 1);
-        hostToActivePartitions.put(hostTwo, Set.of(topic2P0, tp4));
-
-        metadataState.onChange(hostToActivePartitions, hostToStandbyPartitions,
-                Collections.singletonMap(tp4, new PartitionInfo("topic-three", 1, null, null, null)));
-
-
-        assertThrows(IllegalArgumentException.class, () -> metadataState.keyQueryMetadataForKey("table-three",
-                "the-key",
-                new MultiValuedPartitioner()));
     }
 
     @Test
     public void shouldReturnNotAvailableWhenClusterIsEmpty() {
-        metadataState.onChange(Collections.emptyMap(), Collections.emptyMap(), Collections.emptyMap());
-        final KeyQueryMetadata result = metadataState.keyQueryMetadataForKey("table-one", "a", Serdes.String().serializer());
-        assertEquals(KeyQueryMetadata.NOT_AVAILABLE, result);
+        discovery.onChange(Collections.<HostInfo, Set<TopicPartition>>emptyMap(), Cluster.empty());
+        final StreamsMetadata result = discovery.getMetadataWithKey("table-one", "a", Serdes.String().serializer());
+        assertEquals(StreamsMetadata.NOT_AVAILABLE, result);
     }
 
     @Test
     public void shouldGetInstanceWithKeyWithMergedStreams() {
         final TopicPartition topic2P2 = new TopicPartition("topic-two", 2);
-        hostToActivePartitions.put(hostTwo, Set.of(topic2P0, topic1P1, topic2P2));
-        hostToStandbyPartitions.put(hostOne, Set.of(topic2P0, topic1P1, topic2P2));
-        metadataState.onChange(hostToActivePartitions, hostToStandbyPartitions,
-                Collections.singletonMap(topic2P2, new PartitionInfo("topic-two", 2, null, null, null)));
+        hostToPartitions.put(hostTwo, Utils.mkSet(topic2P0, topic1P1, topic2P2));
+        discovery.onChange(hostToPartitions, cluster.withPartitions(Collections.singletonMap(topic2P2, new PartitionInfo("topic-two", 2, null, null, null))));
 
-        final KeyQueryMetadata expected = new KeyQueryMetadata(hostTwo, Set.of(hostOne), 2);
+        final StreamsMetadata expected = new StreamsMetadata(hostTwo, Utils.mkSet("global-table", "table-two", "table-one", "merged-table"),
+                Utils.mkSet(topic2P0, topic1P1, topic2P2));
 
-        final KeyQueryMetadata actual = metadataState.keyQueryMetadataForKey("merged-table",  "the-key",
-            (topic, key, value, numPartitions) -> Optional.of(Collections.singleton(2)));
+        final StreamsMetadata actual = discovery.getMetadataWithKey("merged-table", "123", new StreamPartitioner<String, Object>() {
+            @Override
+            public Integer partition(final String key, final Object value, final int numPartitions) {
+                return 2;
+            }
+        });
 
         assertEquals(expected, actual);
+
     }
 
     @Test
     public void shouldReturnNullOnGetWithKeyWhenStoreDoesntExist() {
-        final KeyQueryMetadata actual = metadataState.keyQueryMetadataForKey("not-a-store",
+        final StreamsMetadata actual = discovery.getMetadataWithKey("not-a-store",
                 "key",
                 Serdes.String().serializer());
         assertNull(actual);
     }
 
-    @Test
+    @Test(expected = NullPointerException.class)
     public void shouldThrowWhenKeyIsNull() {
-        assertThrows(NullPointerException.class, () -> metadataState.keyQueryMetadataForKey("table-three", null, Serdes.String().serializer()));
+        discovery.getMetadataWithKey("table-three", null, Serdes.String().serializer());
     }
 
-    @Test
+    @Test(expected = NullPointerException.class)
     public void shouldThrowWhenSerializerIsNull() {
-        assertThrows(NullPointerException.class, () -> metadataState.keyQueryMetadataForKey("table-three", "key", (Serializer<Object>) null));
+        discovery.getMetadataWithKey("table-three", "key", (Serializer) null);
     }
 
-    @Test
+    @Test(expected = NullPointerException.class)
     public void shouldThrowIfStoreNameIsNull() {
-        assertThrows(NullPointerException.class, () -> metadataState.keyQueryMetadataForKey(null, "key", Serdes.String().serializer()));
+        discovery.getMetadataWithKey(null, "key", Serdes.String().serializer());
     }
 
     @SuppressWarnings("unchecked")
-    @Test
+    @Test(expected = NullPointerException.class)
     public void shouldThrowIfStreamPartitionerIsNull() {
-        assertThrows(NullPointerException.class, () -> metadataState.keyQueryMetadataForKey(null, "key", (StreamPartitioner) null));
+        discovery.getMetadataWithKey(null, "key", (StreamPartitioner) null);
     }
 
     @Test
     public void shouldHaveGlobalStoreInAllMetadata() {
-        final Collection<StreamsMetadata> metadata = metadataState.allMetadataForStore(globalTable);
+        final Collection<StreamsMetadata> metadata = discovery.getAllMetadataForStore(globalTable);
         assertEquals(3, metadata.size());
-        for (final StreamsMetadata streamsMetadata : metadata) {
+        for (StreamsMetadata streamsMetadata : metadata) {
             assertTrue(streamsMetadata.stateStoreNames().contains(globalTable));
         }
     }
 
     @Test
-    public void shouldGetLocalMetadataWithRightActiveStandbyInfo() {
-        assertEquals(hostOne, metadataState.getLocalMetadata().hostInfo());
-        assertEquals(hostToActivePartitions.get(hostOne), metadataState.getLocalMetadata().topicPartitions());
-        assertEquals(hostToStandbyPartitions.get(hostOne), metadataState.getLocalMetadata().standbyTopicPartitions());
-        assertEquals(storeNames, metadataState.getLocalMetadata().stateStoreNames());
-        assertEquals(storeNames.stream().filter(s -> !s.equals(globalTable)).collect(Collectors.toSet()),
-            metadataState.getLocalMetadata().standbyStateStoreNames());
-    }
-
-    @Test
-    public void shouldGetQueryMetadataForGlobalStoreWithKey() {
-        final KeyQueryMetadata metadata = metadataState.keyQueryMetadataForKey(globalTable, "key", Serdes.String().serializer());
-        assertEquals(hostOne, metadata.activeHost());
-        assertTrue(metadata.standbyHosts().isEmpty());
+    public void shouldGetMyMetadataForGlobalStoreWithKey() {
+        final StreamsMetadata metadata = discovery.getMetadataWithKey(globalTable, "key", Serdes.String().serializer());
+        assertEquals(hostOne, metadata.hostInfo());
     }
 
     @Test
     public void shouldGetAnyHostForGlobalStoreByKeyIfMyHostUnknown() {
-        final StreamsMetadataState streamsMetadataState = new StreamsMetadataState(
-            new TopologyMetadata(TopologyWrapper.getInternalTopologyBuilder(builder.build()), new DummyStreamsConfig()),
-            StreamsMetadataState.UNKNOWN_HOST,
-            logContext
-        );
-        streamsMetadataState.onChange(hostToActivePartitions, hostToStandbyPartitions, partitionInfos);
-        assertNotNull(streamsMetadataState.keyQueryMetadataForKey(globalTable, "key", Serdes.String().serializer()));
+        final StreamsMetadataState streamsMetadataState = new StreamsMetadataState(StreamsBuilderTest.internalTopologyBuilder(builder), StreamsMetadataState.UNKNOWN_HOST);
+        streamsMetadataState.onChange(hostToPartitions, cluster);
+        assertNotNull(streamsMetadataState.getMetadataWithKey(globalTable, "key", Serdes.String().serializer()));
     }
 
     @Test
-    public void shouldGetQueryMetadataForGlobalStoreWithKeyAndPartitioner() {
-        final KeyQueryMetadata metadata = metadataState.keyQueryMetadataForKey(globalTable, "key", partitioner);
-        assertEquals(hostOne, metadata.activeHost());
-        assertTrue(metadata.standbyHosts().isEmpty());
+    public void shouldGetMyMetadataForGlobalStoreWithKeyAndPartitioner() {
+        final StreamsMetadata metadata = discovery.getMetadataWithKey(globalTable, "key", partitioner);
+        assertEquals(hostOne, metadata.hostInfo());
     }
 
     @Test
     public void shouldGetAnyHostForGlobalStoreByKeyAndPartitionerIfMyHostUnknown() {
-        final StreamsMetadataState streamsMetadataState = new StreamsMetadataState(
-            new TopologyMetadata(TopologyWrapper.getInternalTopologyBuilder(builder.build()), new DummyStreamsConfig()),
-            StreamsMetadataState.UNKNOWN_HOST,
-            logContext
-        );
-        streamsMetadataState.onChange(hostToActivePartitions, hostToStandbyPartitions, partitionInfos);
-        assertNotNull(streamsMetadataState.keyQueryMetadataForKey(globalTable, "key", partitioner));
+        final StreamsMetadataState streamsMetadataState = new StreamsMetadataState(StreamsBuilderTest.internalTopologyBuilder(builder), StreamsMetadataState.UNKNOWN_HOST);
+        streamsMetadataState.onChange(hostToPartitions, cluster);
+        assertNotNull(streamsMetadataState.getMetadataWithKey(globalTable, "key", partitioner));
     }
 
-    @Test
-    public void shouldReturnAllMetadataThatRemainsValidAfterChange() {
-        final Collection<StreamsMetadata> allMetadata = metadataState.allMetadata();
-        final Collection<StreamsMetadata> copy = new ArrayList<>(allMetadata);
-        assertFalse(allMetadata.isEmpty(), "invalid test");
-        metadataState.onChange(Collections.emptyMap(), Collections.emptyMap(), partitionInfos);
-        assertEquals(allMetadata, copy, "encapsulation broken");
-    }
 
-    @Test
-    public void shouldNotReturnMutableReferenceToInternalAllMetadataCollection() {
-        final Collection<StreamsMetadata> allMetadata = metadataState.allMetadata();
-        assertFalse(allMetadata.isEmpty(), "invalid test");
-
-        try {
-            // Either this should not affect internal state of 'metadataState'
-            allMetadata.clear();
-        } catch (final UnsupportedOperationException e) {
-            // Or should fail.
-        }
-
-        assertFalse(metadataState.allMetadata().isEmpty(), "encapsulation broken");
-    }
 }
